# shangji-bao

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
docker-images-offline/: README.md
prisma/: schema.prisma
prompts/001-init-repo/: raw.md
prompts/002-enhance-proxy/: raw.md
prompts/003/: raw.md
prompts/004/: raw.md
scripts/: cleanup_orphan_parsed.py  cleanup_serp_raw_pages.py  dedup_raw_pages.py  diagnose_parsed.py  export_data.sh  fix_mojibake_raw_pages.py  run_crawler.py  seed_regions.py  seed_sources.py
scripts/windows/: import_data.bat  setup.bat  start.bat  stop.bat  update.bat
src/: config.py
src/app/: __init__.py
src/app/api/: search.py
src/app/routes/: admin.py  frontend.py
src/app/static/css/: style.css
src/app/templates/: base.html
src/app/templates/admin/: base_admin.html  dashboard.html  jobs.html  keywords.html  labeling.html  llm_config.html  login.html  notify.html  parsed.html  regions.html  (+5 more)
src/classifier/: bert_predictor.py  bert_trainer.py  notice_predictor.py  notice_trainer.py  predictor.py  trainer.py
src/crawler/: ccgp_sichuan_crawler.py  gov_api_crawler.py  items.py  link_extractor.py  list_html_crawler.py  middlewares.py  pipelines.py  search_parser.py  settings.py
src/crawler/anti_block/: captcha.py  login.py  proxy_pool.py
src/crawler/spiders/: base_spider.py
src/db/: mongo.py  prisma_client.py
src/llm/: client.py
src/notify/: channels.py  engine.py
src/parser/: base.py  engine.py  extractors.py
src/scheduler/: runner.py  scheduler.py
(+1 files in other folders)
